2007-02-17  Jakub Steiner <jimmac@ximian.com>

	* 24x24/apps/preferences-desktop-locale.png: forgot to add

2007-02-16  Jakub Steiner <jimmac@ximian.com>

	* config-language: remove old icons replaced by preferences-desktop-locale

2007-02-16  Jakub Steiner <jimmac@ximian.com>

	* user-info: CC Applet. Fixes #408585.

2007-02-16  Jakub Steiner <jimmac@ximian.com>

	* gnome-settings-ui-behavior: CC Applet. Fixes #397310. Crappy naming.

2007-02-16  Jakub Steiner <jimmac@ximian.com>

	* preferences-desktop-locale: based on work by Andreas Nilsson, I
		think. Fixes #408673

2007-02-16  Jakub Steiner <jimmac@ximian.com>

	* 32x32/mimetypes/text-x-generic.svg: fix metadata

2007-02-16  Jakub Steiner <jimmac@ximian.com>

	* camera-web: tweaked shading on the vdepizzol's contributed
		artwork. Used for web camera devices.

2007-02-16  Jakub Steiner <jimmac@ximian.com>

	* preferences-desktop-accessibility: Replacement icon from Andreas
		Nilsson. Fixes bug #408594.

2007-02-15  Lapo Calamandrei <calamandrei@gmail.com>

	* */actions/document-revert.*: new icons.

2007-02-15  Jakub Steiner <jimmac@ximian.com>

	* preferences-desktop: 32x32 and scalable versions of
	preferences-desktop category icon. Fixes #395130

2007-02-15  Jakub Steiner <jimmac@ximian.com>

	* evolution: removing evolution app icon which ships with the
	application itself. fixes bug #408225

2007-02-13  Jakub Steiner <jimmac@ximian.com>

	* camera-photo: a compact digital camera goodness.

2007-02-12  Rodney Dawes  <dobey@novell.com>

	* configure.in: Update for 2.17.91 release

	* 32x32/emblems/Makefile.am: Fix small typo

2007-02-12  Rodney Dawes  <dobey@novell.com>

	* */emblems/Makefile.am:
	* */emblems/emblem-default.*:
	Add new emblem-default icon from Andreas Nilsson

	Fixes #400944

2007-02-12  Rodney Dawes  <dobey@novell.com>

	* */apps/Makefile.am:
	* */apps/gnome-session.*:
	Remove this old icon as gnome-session installs a session properties
	icon itself now

	Fixes #355096
