@@ -1,3 +1,7 @@
+2007-02-18  Jakub Steiner <jimmac@ximian.com>
+
+	* input-tablet: include a generic device icon from Sebastian Kraft
+
 2007-02-17  Jakub Steiner <jimmac@ximian.com>
 
 	* 24x24/apps/preferences-desktop-locale.png: forgot to add
